--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -5,22 +5,15 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 {#        {% block stylesheets %}#}
+            {{ encore_entry_link_tags('app') }}
 {#        {% endblock %}#}
 
 {#        {% block javascripts %}#}
+            {{ encore_entry_script_tags('app') }}
 {#        {% endblock %}#}
     </head>
     <body>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <p>Email: {{ app.user.email }}</p>
-            <form action="{{ path('user_logout') }}" method="post">
-                <input type="submit" value=logout>
-            </form>
-        {% else %}
-            <button><a href="{{ path('user_login') }}">Login</a></button>
-        {% endif %}
-
-        <h1>hello</h1>
+        {% include 'components/header.html.twig' %}
         {% block body %}
         {% endblock %}
     </body>
