--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -8,17 +8,40 @@
     src: url("../font/roboto/Roboto-Regular.ttf");
 }
 
-body {
-    background-image: url("../img/stars.jpg");
-    background-size: cover;
-}
-
 .pixel-font {
     font-family: 'PixelifySans-Regular';
 }
 
 .roboto-font {
     font-family: 'Roboto';
+}
+
+body {
+    background-image: url("../img/stars.jpg");
+    margin: 0;
+    padding: 0;
+}
+
+img.stars {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: move-stars 30s linear infinite;
+}
+
+@keyframes move-stars {
+    0% {
+        transform: rotate(-3deg);
+    }
+    50% {
+        transform: rotate(3deg);
+    }
+    100% {
+        transform: rotate(-3deg);
+    }
 }
 
 /* Header*/
