--- a/app/templates/profile.html.twig
+++ b/app/templates/profile.html.twig
@@ -11,7 +11,8 @@
 
     {% if torrents %}
         <div class="container torrent-list">
-            <div class="filter" style="margin-bottom: 40px">
+            <a class="pixel-font" href="{{ path('torrent_file_create') }}">{{ 'Load Torrent'|trans }}</a>
+            <div class="filter" style="margin: 20px 0 40px 0">
                 {{ form_start(filter) }}
                 {{ form_row(filter.title) }}
                 {{ form_row(filter.category) }}
@@ -22,12 +23,10 @@
             <hr>
             {% for torrent in torrents %}
                 <div class="item" data-torrent="{{ torrent.id }}" data-title="{{ torrent.title }}">
-                    <a>
-                        <span style="width: 54%">{{ torrent.title }}</span>
-                        <span style="width: 14%">{{ torrent.status }}</span>
-                        <span style="width: 14%">{{ torrent.createdAt|date("d/m/Y") }}</span>
-                        <button style="width: 8%; margin-right: 15px"class="base-btn delete" data-torrent-id="{{ torrent.id }}">delete</button>
-                        <button style="width: 8%"class="base-btn edit" data-torrent-id="{{ torrent.id }}">edit</button>
+                    <a href="{{ path('torrent_profile', {id: torrent.id}) }}">
+                        <span style="width: 85%">{{ torrent.title }}</span>
+                        <span style="width: 13%">{{ torrent.status }}</span>
+                        <span style="width: 12%">{{ torrent.createdAt|date("d/m/Y") }}</span>
                     </a>
                 </div>
             {% endfor %}
@@ -38,48 +37,7 @@
         </div>
     {% endif %}
 {% endblock %}
+
 {% block script %}
 
-{#    todo : шляпа с модалками.#}
-    <script>
-        $(document).ready(function () {
-            const modal = new Modal();
-            $('.item').on('click', function (e) {
-                e.preventDefault();
-                let torrentId = $(this).data('torrent');
-                let torrentTitle = $(this).data('title');
-                modal.addTitle("<h2>Do you really want to download \"" + torrentTitle + "\" ?</h2>");
-                modal.confirm(() => {
-                    window.location.href = "/torrent/file/" + torrentId;
-                });
-                modal.open();
-            });
-        });
-    </script>
-
-    <script>
-        $(document).ready(function() {
-            const modal = new Modal();
-            $('.delete').on('click', function(e) {
-                e.preventDefault();
-                e.stopPropagation();
-                let torrentId = $(this).data('torrent-id');
-                modal.addTitle("<h2>Do you really want to delete \"" + torrentId + "\" ?</h2>");
-
-                modal.confirm(() => {
-                    let url = `/torrent/file/${torrentId}`;
-                    $.ajax({
-                        url: url,
-                        type: 'DELETE',
-                        success: function () {
-                            location.reload();
-                        },
-                        error: function (response) {
-                            console.log(response)
-                        },
-                    });
-                });
-            });
-        });
-    </script>
 {% endblock %}
