--- a/app/templates/torrent_profile.html.twig
+++ b/app/templates/torrent_profile.html.twig
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="trash-icon">
-                <a href="#">
-                    <img src="{{ asset('img/trash_icon.png') }}" alt="trash-img">
+                <a href="" class="trash-image-link">
+                    <img src="{{ asset('img/trash_icon.png') }}" alt="trash-img" class="image">
                 </a>
             </div>
         {% else %}
