--- a/app/assets/styles/app/form.css
+++ b/app/assets/styles/app/form.css
@@ -47,39 +47,44 @@ div.form-item label {
     padding-right: 15px;
 }
 
-/* */
-.trash-icon {
+/************************/
+/* Styles for trash can */
+/************************/
+
+div.trash-icon {
     position: absolute;
     right: 50px;
-    bottom: 50px;
-    width: 65px; /* Устанавливаем ширину для контейнера */
-    height: 65px; /* Устанавливаем высоту для контейнера */
+    top: 50px;
 }
 
-.trash-icon img {
-    transition: opacity 0.3s ease-in-out;
-    width: 100%; /* Теперь картинка будет масштабироваться в пределах контейнера */
+.trash-image-link {
+    display: inline-block;
+    width: 65px;
+    height: 65px;
+    position: relative;
+    overflow: hidden;
+}
+
+.trash-image-link .image {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s ease;
 }
 
-.trash-icon::before {
-    min-height: 65px;
-    background-position: center center;
-    background-image: url("../../img/filled_trash_icon.png");
-    /*background-size: 65px 65px;*/
-    position: absolute;
-    top: 0;
-    left: 0;
-    /*max-width: 65px !important; !* Масштабируем псевдоэлемент по размеру контейнера *!*/
-    /*max-height: 65px !important;*/
-    /*opacity: 1;*/
-    transition: opacity 0.3s ease-in-out;
-}
-
-.trash-icon:hover img {
+.trash-image-link:hover .image {
     opacity: 0;
 }
 
-.trash-icon:hover::before {
-    opacity: 1;
+.trash-image-link:hover::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../img/filled_trash_icon.png');
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
