--- a/app/templates/home.html.twig
+++ b/app/templates/home.html.twig
@@ -32,8 +32,25 @@
     <script>
         const modal = new Modal();
         $(document).ready(function () {
+            let clickTimer = null;
+
             $('.item').on('click', function (e) {
                 e.preventDefault();
+
+                let element = $(this);
+                clickTimer = setTimeout(function () {
+                    let torrentId = element.data('torrent');
+                    window.location.href = "/torrent/file/" + torrentId;
+                }, 1000); // Задержка в 300 мс (можно настроить при необходимости)
+                // console.log(clickTimer+' start');
+            });
+
+            $('.item').on('dblclick', function (e) {
+                e.preventDefault();
+
+                clearTimeout(clickTimer); // Отменяем обработчик одинарного клика
+                // clickTimer = null;
+                // console.log(clickTimer + ' end');
                 let torrentId = $(this).data('torrent');
                 let torrentTitle = $(this).data('title');
                 modal.addTitle("<h2>Do you really want to download \"" + torrentTitle + "\" ?</h2>");
