--- a/app/templates/auth/user/login.html.twig
+++ b/app/templates/auth/user/login.html.twig
@@ -7,7 +7,7 @@
             {{ include('components/error_block.html.twig', { error: error, }) }}
         {% endif %}
         <div style="display: flex; justify-content: center">
-            <form action="{{ path('user_login') }}" method="post" class="base-form">
+            <form name="login" action="{{ path('user_login') }}" method="post" class="base-form">
                 <div class="form-item">
                     <label for="user_email">Email:</label>
                     <input type="text" id="user_email" name="_email" value="{{ last_user_email }}">
